--- a/src/app/webstories/webstories.component.html
+++ b/src/app/webstories/webstories.component.html
@@ -10,4 +10,12 @@
       (triggerOnStoryChange)="currentStoryDetails($event)"
     ></ngx-stories>
   </div>
+
+  <button
+    type="button"
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+    routerLink="/apm-story"
+  >
+    Click Me!
+  </button>
 </div>
